; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/urlmon/extr_urlmon_main.c_process_detach.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/urlmon/extr_urlmon_main.c_process_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hCabinet = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @process_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @process_detach() #0 {
  %1 = alloca i64, align 8
  %2 = call i64 @get_internet_session(i32* null)
  store i64 %2, i64* %1, align 8
  %3 = load i64, i64* %1, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load i64, i64* %1, align 8
  %7 = call i32 @InternetCloseHandle(i64 %6)
  br label %8

8:                                                ; preds = %5, %0
  %9 = load i64, i64* @hCabinet, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %8
  %12 = load i64, i64* @hCabinet, align 8
  %13 = call i32 @FreeLibrary(i64 %12)
  br label %14

14:                                               ; preds = %11, %8
  %15 = call i32 (...) @free_session()
  %16 = call i32 (...) @free_tls_list()
  %17 = call i32 (...) @unregister_notif_wnd_class()
  ret void
}

declare dso_local i64 @get_internet_session(i32*) #1

declare dso_local i32 @InternetCloseHandle(i64) #1

declare dso_local i32 @FreeLibrary(i64) #1

declare dso_local i32 @free_session(...) #1

declare dso_local i32 @free_tls_list(...) #1

declare dso_local i32 @unregister_notif_wnd_class(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
